--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
         <nav>
           <ul class="nav-list">
-            <li class="nav-link"><a href="#!">Hola</a></li>
-            <li class="nav-link"><a href="#!">Hola</a></li>
-            <li class="nav-link"><a href="#!">Hola</a></li>
-            <li class="nav-link"><a href="#!">Hola</a></li>
+            <li class="nav-link"><a href="#header">Inicio</a></li>
+            <li class="nav-link"><a href="#company">Quienes Somos</a></li>
+            <li class="nav-link"><a href="#products">Productos</a></li>
+            <li class="nav-link"><a href="#contact">Contacto</a></li>
           </ul>
         </nav>
 
@@ -43,20 +43,18 @@
     </header>
     <main>
       <img class="repair" src="assets/img/repair.png" alt="" />
-      <section id="company" class=""></section>
 
-      <!-- Services -->
+      <!-- Company -->
+      <section id="company" class="company"></section>
 
-      <section id="services" class="section services"></section>
+      <!-- Products -->
 
-      <!-- Projects -->
+      <section id="products" class="products"></section>
 
-      <section id="projects" class=""></section>
+      <!-- Contact -->
+
+      <section id="contact" class="contact"></section>
     </main>
-
-    <!-- Contact -->
-
-    <section id="contact" class=""></section>
 
     <div id="whatsapp" class="btnWsp">
       <a href="https://wa.me/+5493471416804" class="btn-wsp" target="_blank">
