--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <textarea
               name="textarea"
               id="textarea"
-              placeholder="Su mensaje"
+              placeholder="Su consulta"
               required
             ></textarea>
           </div>
