--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0"
     />
-    <!-- <link rel="icon" href="assets/logo/logo2.png" type="logo" /> -->
+    <link rel="icon" href="assets/logo/logo.png" type="logo" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/medias.css" />
     <link rel="stylesheet" type="text/css" href="css/aos.css" />
@@ -32,7 +32,7 @@
         <nav id="nav">
           <ul class="nav-list">
             <li class="nav-link"><a href="#header">Inicio</a></li>
-            <li class="nav-link"><a href="#company">Quienes Somos</a></li>
+            <li class="nav-link"><a href="#company">Nosotros</a></li>
             <li class="nav-link"><a href="#products">Productos</a></li>
             <li class="nav-link"><a href="#contact">Contacto</a></li>
           </ul>
@@ -104,7 +104,7 @@
         <div class="location">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2738.347899740965!2d-61.252322593599125!3d-32.84831161359619!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x90f2c9bfda140dae!2sInolvidable%20Elena!5e0!3m2!1ses!2sar!4v1672766548527!5m2!1ses!2sar"
-            width="600"
+            width="550"
             height="450"
             style="border: 0"
             allowfullscreen=""
@@ -193,7 +193,11 @@
     </div>
 
     <div id="store" class="store">
-      <a href="#!">
+      <a
+        href="
+        https://jotapeshop.mercadoshops.com.ar/"
+        target="_blank"
+      >
         <i class="fas fa-store"></i>
         Tienda Online
       </a>
@@ -227,7 +231,7 @@
           <!-- Email -->
           <a
             class="btn btn-link btn-floating btn-lg text-dark m-1"
-            href="mailto:jotapeshop@gmail.com"
+            href="mailto:jotapeshop.jp@gmail.com"
             role="button"
             target="_blank"
             data-mdb-ripple-color="dark"
@@ -237,7 +241,7 @@
           <!-- Instagram -->
           <a
             class="btn btn-link btn-floating btn-lg text-dark m-1"
-            href="https://www.instagram.com/jotapeshop_"
+            href="https://www.instagram.com/jotape.shop_"
             role="button"
             target="_blank"
             data-mdb-ripple-color="dark"
