Cambios en iframe, enlaces, etc

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <iframe
             class="visible"
             title="Noticias"
-            src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fpao.olivanti&tabs=timeline&width=500&height=600&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+            src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fjotape.shop1&tabs=timeline&width=500&height=600&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
             width="500"
             height="600"
             scrolling="yes"
