Agregue enlace de FB

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
           <!-- Facebook -->
           <a
             class="btn btn-link btn-floating btn-lg text-dark m-1"
-            href="https://www.facebook.com/jotapeshop_"
+            href="https://www.facebook.com/jotape.shop1"
             role="button"
             target="_blank"
             data-mdb-ripple-color="dark"
