--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       <!-- <img class="repair" src="assets/img/repair.png" alt="" /> -->
       <div class="tittle">
         <h1>JotaPe SHOP</h1>
+        <img class="banner" src="assets/img/banner3.jpg" alt="" />
       </div>
 
       <!-- Company -->
@@ -87,6 +88,7 @@
       <!-- Products -->
 
       <section id="products" class="products">
+        <img class="banner" src="assets/img/banner2.webp" alt="" />
         <h2>Aqui irian los productos</h2>
         <div class="img-products">
           <img src="assets/img/repair.png" alt="" />
