Agregado de productos

--- a/index.html
+++ b/index.html
@@ -91,11 +91,21 @@
         <img class="banner" src="assets/img/banner2.webp" alt="" />
         <h2>Aqui irian los productos</h2>
         <div class="img-products">
-          <img src="assets/img/repair.png" alt="" />
-          <img src="assets/img/repair.png" alt="" />
-          <img src="assets/img/repair.png" alt="" />
-          <img src="assets/img/repair.png" alt="" />
-          <img src="assets/img/repair.png" alt="" />
+          <img src="assets/img/almohada1.jpg" alt="" />
+          <img src="assets/img/almohada2.jpg" alt="" />
+          <img src="assets/img/botellas.jpg" alt="" />
+          <img src="assets/img/botella1.jpg" alt="" />
+          <img src="assets/img/carpeta1.jpg" alt="" />
+          <img src="assets/img/carpeta2.jpg" alt="" />
+          <img src="assets/img/carpeta3.jpg" alt="" />
+          <img src="assets/img/foto1.jpg" alt="" />
+          <img src="assets/img/foto2.jpg" alt="" />
+          <img src="assets/img/mochila.jpg" alt="" />
+          <img src="assets/img/mochila2.jpg" alt="" />
+          <img src="assets/img/taza1.jpg" alt="" />
+          <img src="assets/img/tazas.jpg" alt="" />
+          <img src="assets/img/vaso1.jpg" alt="" />
+          <img src="assets/img/vasos.jpg" alt="" />
         </div>
       </section>
 
