Agregue iframe productos

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 
       <section id="products" class="products">
         <img class="banner" src="assets/img/banner2.webp" alt="" />
-        <h2>Aqui irian los productos</h2>
-        <div class="img-products">
+        <!-- <h2>Aqui irian los productos</h2> -->
+        <!-- <div class="img-products">
           <img src="assets/img/almohada1.jpg" alt="" />
           <img src="assets/img/almohada2.jpg" alt="" />
           <img src="assets/img/botellas.jpg" alt="" />
@@ -106,7 +106,32 @@
           <img src="assets/img/tazas.jpg" alt="" />
           <img src="assets/img/vaso1.jpg" alt="" />
           <img src="assets/img/vasos.jpg" alt="" />
+        </div> -->
+        <div class="img-products col-lg-12 col-md-12 col-12">
+          <iframe
+            class="visible col-lg-12 col-md-12 col-12"
+            title="Noticias"
+            src="https://jotapeshop.mercadoshops.com.ar/nuestros-productos"
+            height="600"
+            scrolling="yes"
+            frameborder="0"
+            allowfullscreen="true"
+            allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
+          >
+          </iframe>
         </div>
+        <iframe
+          class="hidden col-lg-12 col-md-12 col-12"
+          title="Noticias"
+          src="https://jotapeshop.mercadoshops.com.ar/listado/ropa-accesorios/"
+          width="350"
+          height="600"
+          scrolling="yes"
+          frameborder="0"
+          allowfullscreen="true"
+          allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
+        >
+        </iframe>
       </section>
 
       <!-- Contact -->
