Iframe productos agregado

--- a/index.html
+++ b/index.html
@@ -107,7 +107,26 @@
           <img src="assets/img/vaso1.jpg" alt="" />
           <img src="assets/img/vasos.jpg" alt="" />
         </div> -->
+
         <div class="img-products col-lg-12 col-md-12 col-12">
+          <a
+            style="
+              background: var(--lightgrey);
+              padding: 15px;
+              border-radius: 16px;
+              color: var(--pink);
+              font-weight: bold;
+              position: relative;
+              top: 120px;
+              left: 0px;
+              width: 100%;
+              height: 15vh;
+            "
+            target="_blank"
+            href="https://jotapeshop.mercadoshops.com.ar/nuestros-productos"
+          >
+            <i class="fas fa-store"></i>Ver todos los productos</a
+          >
           <iframe
             class="visible col-lg-12 col-md-12 col-12"
             title="Noticias"
@@ -123,7 +142,7 @@
         <iframe
           class="hidden col-lg-12 col-md-12 col-12"
           title="Noticias"
-          src="https://jotapeshop.mercadoshops.com.ar/listado/ropa-accesorios/"
+          src="https://jotapeshop.mercadoshops.com.ar/nuestros-productos"
           width="350"
           height="600"
           scrolling="yes"
