--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <main>
       <!-- <img class="repair" src="assets/img/repair.png" alt="" /> -->
       <div class="tittle">
-        <h1>JotaPe SHOP</h1>
+        <h1 class="text-center">JotaPe SHOP</h1>
         <img class="banner" src="assets/img/banner3.jpg" alt="" />
       </div>
 
