--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>JotaPe SHOP</title>
   </head>
   <body id="header">
-    <header>
+    <!-- <header>
       <div class="container-navbar">
         <div class="nav-logo">
           <img src="assets/logo/logo.png" alt="" />
@@ -40,233 +40,27 @@
 
         <div class="nav-toggle">|||</div>
       </div>
-    </header>
+    </header> -->
     <main>
-      <!-- <img class="repair" src="assets/img/repair.png" alt="" /> -->
-      <div class="tittle">
-        <h1 class="text-center">JotaPe SHOP</h1>
-        <img class="banner" src="assets/img/banner3.jpg" alt="" />
-      </div>
-
-      <!-- Company -->
-      <section id="company" class="company">
-        <article>
-          <h2>
-            Somos Joe y Pao, una pareja de novios que fusionaron sus
-            emprendimientos en esta tienda, para aportar felicidad a tu vida
-            mediante el uso de nuestros productos..
-          </h2>
-        </article>
-        <div>
-          <iframe
-            class="visible"
-            title="Noticias"
-            src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fjotape.shop1&tabs=timeline&width=500&height=600&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-            width="500"
-            height="600"
-            scrolling="yes"
-            frameborder="0"
-            allowfullscreen="true"
-            allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
-          >
-          </iframe>
-          <iframe
-            class="hidden"
-            title="Noticias"
-            src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fjotape.shop1&tabs=timeline&width=500&height=600&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-            width="350"
-            height="600"
-            scrolling="yes"
-            frameborder="0"
-            allowfullscreen="true"
-            allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
-          >
-          </iframe>
+      <!-- <section> -->
+      <a href="https://jotapeshop.mercadoshops.com.ar/">
+        <div class="headline">
+          <div class="logo-slogan">
+            <img id="logo" src="assets/logo/logo.png" alt="logo-MG_Solutions" />
+            <span id="text-typed"
+              >Somos Joe y Pao, una pareja de novios que fusionaron sus
+              emprendimientos en esta tienda, para aportar felicidad a tu vida
+              mediante el uso de nuestros productos..</span
+            >
+          </div>
+          <div class="text-home">
+            <h1>Bienvenidos a JotaPe SHOP</h1>
+            <h5>Para ingresar, haga click en pantalla</h5>
+          </div>
         </div>
-      </section>
-
-      <!-- Products -->
-
-      <section id="products" class="products">
-        <img class="banner" src="assets/img/banner2.webp" alt="" />
-        <!-- <h2>Aqui irian los productos</h2> -->
-        <!-- <div class="img-products">
-          <img src="assets/img/almohada1.jpg" alt="" />
-          <img src="assets/img/almohada2.jpg" alt="" />
-          <img src="assets/img/botellas.jpg" alt="" />
-          <img src="assets/img/botella1.jpg" alt="" />
-          <img src="assets/img/carpeta1.jpg" alt="" />
-          <img src="assets/img/carpeta2.jpg" alt="" />
-          <img src="assets/img/carpeta3.jpg" alt="" />
-          <img src="assets/img/foto1.jpg" alt="" />
-          <img src="assets/img/foto2.jpg" alt="" />
-          <img src="assets/img/mochila.jpg" alt="" />
-          <img src="assets/img/mochila2.jpg" alt="" />
-          <img src="assets/img/taza1.jpg" alt="" />
-          <img src="assets/img/tazas.jpg" alt="" />
-          <img src="assets/img/vaso1.jpg" alt="" />
-          <img src="assets/img/vasos.jpg" alt="" />
-        </div> -->
-
-        <div class="img-products col-lg-12 col-md-12 col-12">
-          <a
-            style="
-              background: var(--lightgrey);
-              padding: 15px;
-              border-radius: 16px;
-              color: var(--pink);
-              font-weight: bold;
-              position: relative;
-              top: 120px;
-              left: 0px;
-              width: 100%;
-              height: 15vh;
-            "
-            target="_blank"
-            href="https://jotapeshop.mercadoshops.com.ar/nuestros-productos"
-          >
-            <i class="fas fa-store"></i>Ver todos los productos</a
-          >
-          <iframe
-            class="visible col-lg-12 col-md-12 col-12"
-            title="Noticias"
-            src="https://jotapeshop.mercadoshops.com.ar/nuestros-productos"
-            height="600"
-            scrolling="yes"
-            frameborder="0"
-            allowfullscreen="true"
-            allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
-          >
-          </iframe>
-        </div>
-        <iframe
-          class="hidden col-lg-12 col-md-12 col-12"
-          title="Noticias"
-          src="https://jotapeshop.mercadoshops.com.ar/nuestros-productos"
-          width="350"
-          height="600"
-          scrolling="yes"
-          frameborder="0"
-          allowfullscreen="true"
-          allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
-        >
-        </iframe>
-      </section>
-
-      <!-- Contact -->
-
-      <section id="contact" class="contact">
-        <div class="location">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2738.347899740965!2d-61.252322593599125!3d-32.84831161359619!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x90f2c9bfda140dae!2sInolvidable%20Elena!5e0!3m2!1ses!2sar!4v1672766548527!5m2!1ses!2sar"
-            width="550"
-            height="450"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-        </div>
-        <form>
-          <div class="label">
-            <img src="assets/icons/user.png" alt="" /><label for="name"></label>
-            <input
-              type="text"
-              id="name"
-              name="name"
-              placeholder="Nombre"
-              required
-            />
-          </div>
-
-          <div class="label">
-            <img src="assets/icons/user.png" alt="" /><label
-              for="surname"
-            ></label>
-            <input
-              type="text"
-              id="surname"
-              name="surname"
-              placeholder="Apellido"
-              required
-            />
-          </div>
-
-          <div class="label">
-            <img src="assets/icons/envelope.png" alt="" /><label
-              for="email"
-            ></label>
-            <input
-              type="email"
-              id="email"
-              name="email"
-              placeholder="Email"
-              required
-            />
-          </div>
-
-          <div class="label">
-            <img src="assets/icons/phone.png" alt="" /><label
-              for="phone"
-            ></label>
-            <input
-              type="number"
-              id="phone"
-              name="phone"
-              placeholder="Teléfono"
-              required
-            />
-          </div>
-
-          <div>
-            <textarea
-              name="textarea"
-              id="textarea"
-              placeholder="Su consulta"
-              required
-            ></textarea>
-          </div>
-
-          <div>
-            <button type="submit">Enviar</button>
-          </div>
-        </form>
-      </section>
+      </a>
+      <!-- </section> -->
     </main>
-
-    <!-- Float Buttons -->
-
-    <div id="whatsapp" class="btnWsp">
-      <a href="https://wa.me/+5493413744400" class="btn-wsp" target="_blank">
-        <i class="icon-whatsapp"></i>
-        <img
-          src="assets/icons/whatsapp.png"
-          style="width: 3rem"
-          alt="logowsp"
-        />
-      </a>
-    </div>
-
-    <div id="store" class="store">
-      <a
-        href="
-        https://jotapeshop.mercadoshops.com.ar/"
-        target="_blank"
-      >
-        <i class="fas fa-store"></i>
-        Tienda Online
-      </a>
-    </div>
-
-    <div id="up" class="up">
-      <a href="#header">
-        <i class="fas fa-arrow-circle-up"></i>
-      </a>
-    </div>
-
-    <!-- Float Buttons -->
-
-    <!-- Footer -->
 
     <footer class="text-center text-white">
       <!-- Grid container -->
